deps: update swagger-ui-express dependency

--- a/package.json
+++ b/package.json
@@ -57,9 +57,10 @@
     "nodemailer": "^6.8.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pdfkit": "^0.13.0",
+    "socket.io": "^4.6.0",
     "stripe": "^11.5.0",
     "swagger-jsdoc": "^6.2.5",
-    "swagger-ui-express": "^4.6.0",
+    "swagger-ui-express": "^4.6.2",
     "tsconfig-paths": "^4.1.1",
     "uuid": "^9.0.0",
     "winston": "^3.8.2",
